--- a/web/src/views/tpgen/online/index.scss
+++ b/web/src/views/tpgen/online/index.scss
@@ -58,7 +58,7 @@
     flex: 1;
     overflow: auto;
     padding: 25px 20px;
-    max-width: 1200px;
+    max-width: 95%;
     margin: 0 auto;
     width: 100%;
 
